Implementation for ACTIVEMQ6-98: Make the the distro readonly and support creating mutable broker instances dirs.